# bear-atm

./: .clang-format  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
bear_atm/: CMakeLists.txt
bear_atm/cmake/: bear_atm_config.cmake.in
bear_atm/include/bear_atm/: account.hpp  bank.hpp  bear_atm.hpp  card.hpp
bear_atm/src/: account.cpp  bank.cpp  bear_atm.cpp  card.cpp
bear_atm/test/: CMakeLists.txt  test_account.cpp  test_atm.cpp  test_bank.cpp  test_card.cpp  test_code.cpp
example/: CMakeLists.txt  atm_example.cpp
